AssignmentGit/force-app/main/default/objects/Developer__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR (TODAY())-YEAR(DateOfBirth__c)-
IF(
MONTH(TODAY())&lt; MONTH( DateOfBirth__c )||
(
MONTH(TODAY())=MONTH( DateOfBirth__c ) &amp;&amp; DAY(TODAY())&lt;DAY( DateOfBirth__c )),
1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AGE ACCORDING TO FORMULA</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>