AssignmentGit/force-app/main/default/objects/Developer__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateOfBirth</label>
    <type>Date</type>
</CustomField>