AssignmentGit/force-app/main/default/objects/Developer__c/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>STATE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_GVS</valueSetName>
    </valueSet>
</CustomField>